# 8BitVita

./: 8BitVita.yml  CMakeLists.txt  README.md
sce_sys/livearea/contents/: template.xml
src/: bluetooth.c  common.h  debug.c
